<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b>&lt;br />on your smartphone or computer&lt;br />and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="dgts__call_me">Call me</string>
    <string name="dgts__calling">Calling…</string>
    <string name="dgts__confirmation_code">Confirmation code</string>
    <string name="dgts__confirmation_edit_hint">Enter the 6-digit code we sent you</string>
    <string name="dgts__confirmation_error">Unable to confirm your phone number</string>
    <string name="dgts__confirmation_error_alternative">Sorry, we are having trouble sending you a confirmation code.</string>
    <string name="dgts__confirmation_expired">This code has expired. Please resend confirmation code.</string>
    <string name="dgts__continue">Continue</string>
    <string name="dgts__create_account">Create account</string>
    <string name="dgts__digits_logo_desc">digits logo icon</string>
    <string name="dgts__digits_logo_name_desc">digits logo name</string>
    <string name="dgts__dismiss">Dismiss</string>
    <string name="dgts__done">Done</string>
    <string name="dgts__email_request_edit_hint">Email address</string>
    <string name="dgts__email_request_title">Enter email address</string>
    <string name="dgts__find_your_friends">Find your friends</string>
    <string name="dgts__image_header_description">Image header for login</string>
    <string name="dgts__invalid_email">Invalid Email. Try Again</string>
    <string name="dgts__login_digits_text">Use my phone number</string>
    <string name="dgts__network_error">Please check your network and try again.</string>
    <string name="dgts__not_now">Not now</string>
    <string name="dgts__okay">Okay</string>
    <string name="dgts__phone_number_edit_hint">Your Number</string>
    <string name="dgts__phone_number_text">Enter your phone number</string>
    <string name="dgts__pin_code_verification_title">Enter 2-step verification code</string>
    <string name="dgts__resend_confirmation_button_code">Resend code</string>
    <string name="dgts__resend_confirmation_text">Resend confirmation code</string>
    <string name="dgts__send_confirmation_code">Send confirmation code</string>
    <string name="dgts__sending">Sending…</string>
    <string name="dgts__success_desc">Success Icon</string>
    <string name="dgts__terms_email_request">By tapping %1$sContinue%1$s above, you are adding this email to your Digits account. You agree that this app and %7$sall apps listed in your Digits account%5$s can access this email address and their users can discover you by email.</string>
    <string name="dgts__terms_text">By tapping %1$sSend confirmation code%1$s above, %6$sDigits by Twitter%5$s will send you an SMS to confirm your phone number. On the next screen, you can choose “Resend code” to receive a new SMS or “Call me” to initiate a phone call to confirm your phone number. Message, call &amp; data rates may apply.</string>
    <string name="dgts__terms_text_call_me">By tapping %1$sCall me%1$s above, %6$sDigits by Twitter%5$s will send you a voice call to confirm your phone number. Call &amp; data rates may apply.</string>
    <string name="dgts__terms_text_create">By tapping %1$sCreate account%1$s above, you agree to the %8$sTerms of Service%5$s, %9$sPrivacy Policy%5$s, and %10$sCookies Use%5$s of %6$sDigits by Twitter%5$s, to share your phone number with %4$s, and that other users of %4$s can discover you by phone number.</string>
    <string name="dgts__terms_text_sign_in">By tapping %1$sContinue%1$s above, your %7$sDigits phone number and/or email address%5$s will be shared with %4$s and other users of %4$s can discover you by phone number and/or email.</string>
    <string name="dgts__terms_text_updated">By tapping %1$sContinue%1$s above, you agree to the %8$sTerms of Service%5$s, %9$sPrivacy Policy%5$s, and %10$sCookies Use%5$s of %6$sDigits by Twitter%5$s, to share your %7$sDigits phone number and/or email address%5$s with %4$s, and other users of %4$s can discover you by phone number and/or email.</string>
    <string name="dgts__try_again">Try Again</string>
    <string name="dgts__try_again_confirmation">Please check your code and try again.</string>
    <string name="dgts__try_again_email">Please check your email and try again</string>
    <string name="dgts__try_again_phone_number">Please check your number and try again.</string>
    <string name="dgts__try_another_phone">Try a different phone number</string>
    <string name="dgts__unsupported_operator_error">Unable to send this number an SMS message.</string>
    <string name="dgts__upload_contacts">"We use Digits by Twitter to find more of your friends who use this app. When you tap Okay, we'll upload your address book to Digits by Twitter so that we can help you find users of %1$s that you know or help other users of %1$s find you."</string>
    <string name="dgts__verification_code">Verification code</string>
    <string name="dgts_pin_code_terms">You have previously set a 2-step verification code on digits.com</string>
    <string name="tw__allow_btn_txt">Allow</string>
    <string name="tw__cta_text">Open in Vine</string>
    <string name="tw__like_tweet">Like Tweet</string>
    <string name="tw__liked_tweet">Undo Like</string>
    <string name="tw__loading_tweet">Loading Tweet</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__not_now_btn_txt">Not now</string>
    <string name="tw__pause">pause</string>
    <string name="age_range">"Tranche d'âge"</string>
    <string name="both">Les deux</string>
    <string name="change_info">Modifier mes données personnelles</string>
    <string name="change_password">Changer mon mot de passe</string>
    <string name="choose_sub">Choisissez votre forfait</string>
    <string name="confirm_password">Confirmer mon mot de passe</string>
    <string name="connect_facebook">"Me connecter avec
Facebook"</string>
    <string name="connect_mail">"Me connecter avec
mon e-mail"</string>
    <string name="create_account">Créer mon compte avec mon e-mail</string>
    <string name="create_for_no_account">"Bienvenue sur Whatelfe
Créez votre profil en 3 clics"</string>
    <string name="delete_profile">Supprimer mon profil</string>
    <string name="friendship">Amitié</string>
    <string name="looking_for">Je recherche</string>
    <string name="love">Amour</string>
    <string name="mail">Adresse mail</string>
    <string name="man">Homme</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="nickname">Pseudonyme</string>
    <string name="password">Mot de passe</string>
    <string name="price_day">0,99€ pour 24h</string>
    <string name="price_month">15,99€ pour 1 mois</string>
    <string name="price_week">3,99€ pour 1 semaine</string>
    <string name="price_year">59,99€ pour 1 an</string>
    <string name="search_gallery">Parcourir la galerie</string>
    <string name="select_image">Sélectionner une image de profil</string>
    <string name="to_answer_pay">Choisissez votre forfait pour envoyer ou répondre à des invitations en illimité pendant :</string>
    <string name="with">avec</string>
    <string name="with_camera">Prendre une photo</string>
    <string name="woman">Femme</string>
</resources>