<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@id/cl_root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/bg_golf_blur" android:scaleType="centerCrop" />
        <TextView android:textSize="28.0sp" android:textColor="@color/colorPrimary" android:gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_horizontal_margin" android:text="@string/change_info" android:layout_centerHorizontal="true" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_centerInParent="true">
            <EditText android:gravity="top" android:id="@id/et_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password" android:layout_centerHorizontal="true" android:inputType="textPassword" style="@style/InputField" />
            <EditText android:gravity="top" android:id="@id/et_new_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/new_password" android:layout_below="@id/et_password" android:layout_centerHorizontal="true" android:inputType="textPassword" style="@style/InputField" />
            <EditText android:gravity="top" android:id="@id/et_new_password_confirm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/confirm_password" android:layout_below="@id/et_new_password" android:layout_centerHorizontal="true" android:inputType="textPassword" style="@style/InputField" />
            <Button android:textColor="@color/colorWhite" android:id="@id/b_change_password" android:background="@color/colorPrimary" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/ic_validate_white" android:text="@string/change_password" android:layout_below="@id/et_new_password_confirm" android:layout_alignLeft="@id/et_new_password_confirm" android:layout_alignRight="@id/et_new_password_confirm" android:textAllCaps="false" />
        </RelativeLayout>
        <Button android:textColor="@color/colorWhite" android:id="@id/b_delete_profile" android:background="@color/colorPrimary" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/ic_validate_white" android:text="@string/delete_profile" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAllCaps="false" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>