<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/bg_golf" android:scaleType="centerCrop" />
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="105.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="105.0dip" android:src="@drawable/logo_big" android:scaleType="fitStart" />
    <TextView android:textStyle="bold" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tv_signUp" android:paddingLeft="8.0dip" android:paddingTop="5.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/create_for_no_account" android:layout_centerInParent="true" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/colorWhite" android:id="@id/b_create_account" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="50.0dip" android:text="@string/create_account" android:layout_below="@id/tv_signUp" android:textAllCaps="false" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textColor="@color/colorWhite" android:id="@id/btnFacebook" android:background="@color/colorBlueFacebook" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/connect_facebook" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:textColor="@color/colorWhite" android:id="@id/b_connect_mail" android:background="@color/colorPrimary" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/connect_mail" android:layout_weight="1.0" android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>