<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_white_round_corner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dialog_margin"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip">
        <TextView android:textColor="@color/colorBlack" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_title" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/choose_sub" android:fontFamily="sans-serif-light" style="@style/TextAppearance.AppCompat.Large" />
        <TextView android:textColor="@color/colorBlack" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_message" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/to_answer_pay" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:id="@id/ll_day" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/cb_day" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textColor="@color/colorBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/price_day" />
            </LinearLayout>
            <LinearLayout android:id="@id/ll_week" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/cb_week" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textColor="@color/colorBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/price_week" />
            </LinearLayout>
            <LinearLayout android:id="@id/ll_month" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/cb_month" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textColor="@color/colorBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/price_month" />
            </LinearLayout>
            <LinearLayout android:id="@id/ll_year" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/cb_year" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textColor="@color/colorBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/price_year" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/ib_negative" android:background="@color/colorMediumPink" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_clear_small" android:layout_weight="1.0" style="@style/PinkImageButton" />
        <ImageButton android:id="@id/ib_positive" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" style="@style/PinkImageButton" />
    </LinearLayout>
</LinearLayout>