<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/bg_golf_blur" android:scaleType="centerCrop" />
    <ScrollView android:layout_width="wrap_content" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="105.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="105.0dip" android:src="@drawable/logo_big" android:scaleType="fitStart" android:adjustViewBounds="true" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/et_nickname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/nickname" android:layout_centerHorizontal="true" android:inputType="textCapSentences" style="@style/InputField" />
                <EditText android:id="@id/et_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/mail" android:layout_below="@id/et_nickname" android:inputType="textEmailAddress" style="@style/InputField" />
                <EditText android:id="@id/et_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/password" android:layout_below="@id/et_email" android:inputType="textPassword" style="@style/InputField" />
                <EditText android:id="@id/et_confirm_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/confirm_password" android:layout_below="@id/et_password" android:inputType="textPassword" style="@style/InputField" />
                <ImageButton android:textColor="@color/colorWhite" android:id="@id/b_to_personal_info" android:background="@color/colorPrimary" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/ic_validate_white" android:layout_below="@id/et_confirm_password" android:layout_alignLeft="@id/et_confirm_password" android:layout_alignRight="@id/et_confirm_password" android:textAllCaps="false" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>