<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@id/cl_root" android:background="@color/colorMediumPink" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/b_validate">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
                <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/looking_for" style="@style/TextAppearance.AppCompat.Large" />
                <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ImageView android:id="@id/iv_love" android:background="@drawable/bg_white" android:padding="30.0dip" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_off_love" />
                        <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/love" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ImageView android:id="@id/iv_friendship" android:background="@drawable/bg_white" android:padding="26.0dip" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_off_friendship" />
                        <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/friendship" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ImageView android:id="@id/iv_relation_both" android:background="@drawable/bg_white" android:padding="30.0dip" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_off_relation_both" />
                        <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/both" />
                    </LinearLayout>
                </LinearLayout>
                <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/with" style="@style/TextAppearance.AppCompat.Medium" />
                <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ImageView android:id="@id/iv_relation_m" android:background="@drawable/bg_white" android:padding="26.0dip" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_off_gender_m" />
                        <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/man" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ImageView android:id="@id/iv_relation_f" android:background="@drawable/bg_white" android:padding="26.0dip" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_off_gender_f" />
                        <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/woman" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ImageView android:id="@id/iv_relation_b" android:background="@drawable/bg_white" android:padding="26.0dip" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_off_gender_both" />
                        <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/both" />
                    </LinearLayout>
                </LinearLayout>
                <TextView android:textColor="@color/colorWhite" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/age_range" style="@style/TextAppearance.AppCompat.Medium" />
                <com.myluckyday.whatelfe.widgets.slider.RangeBar android:id="@id/rb_age" android:layout_width="fill_parent" android:layout_height="72.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" app:tickStart="18.0" app:tickEnd="75.0" app:tickInterval="5.0" app:tickColor="@color/colorWhite" app:textColor="@color/colorPrimary" app:pinColor="@color/colorWhite" app:selectorColor="@color/colorTranslucent" app:temporaryPins="false" app:connectingLineColor="@color/colorPrimary" />
            </LinearLayout>
        </RelativeLayout>
        <ImageButton android:id="@id/b_validate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_alignParentBottom="true" style="@style/PinkImageButton" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>