<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_white_round_corner" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/colorBlack" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_title" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_image" android:fontFamily="sans-serif-light" style="@style/TextAppearance.AppCompat.Large" />
    <RadioGroup android:id="@id/rg_selection" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <android.support.v7.widget.AppCompatRadioButton android:id="@id/rb_camera" android:padding="@dimen/activity_horizontal_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/with_camera" />
        <android.support.v7.widget.AppCompatRadioButton android:id="@id/rb_gallery" android:padding="@dimen/activity_horizontal_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_gallery" />
    </RadioGroup>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/ib_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" style="@style/DarkPinkImageButton" />
        <ImageButton android:id="@id/ib_valid" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/PinkImageButton" />
    </LinearLayout>
</LinearLayout>